--- a/public/app/themes/studio/assets/styles/application.scss
+++ b/public/app/themes/studio/assets/styles/application.scss
@@ -6,6 +6,7 @@
 @import "components/list";
 @import "components/slickslider";
 @import "components/noUI";
+@import "components/form";
 
 @import "blocks/header";
 @import "blocks/general";
@@ -16,6 +17,7 @@
 @import "blocks/get-directions";
 @import "blocks/floorplans";
 @import "blocks/floorplan-detail";
+@import "blocks/sight-map";
 
 
 @import "blocks/footer";
