--- a/public/app/themes/studio/assets/styles/blocks/_floorplans.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_floorplans.scss
@@ -66,8 +66,9 @@
 			font-weight: 300;
 			font-size: 21px;
 			width: 100%;
-			@media screen and (min-width: 991px){
-				max-width: 455px;
+			@media screen and (min-width: 600px){
+				width: calc(100% - 200px);
+				border-right: 1px solid $white;
 			}
 		}
 		&--view{
@@ -78,12 +79,10 @@
 				text-align: center;
 				margin-top: 20px;	
 			}
-			@media screen and (max-width: 767px){
+			@media screen and (min-width: 600px){
 				max-width: 200px;
 			}
-			@media screen and (min-width: 991px){
-				max-width: calc(100% - 210px - 70px - 455px);
-			}
+
 			a{
 				font-size: 23px;
 				font-weight: 500;
@@ -93,7 +92,7 @@
 				transition:all .5s ease;
 				color:$luxor-gold;
 				@media screen and (min-width: 600px){
-					margin-right: 50px;
+					margin-right: 40px;
 					max-width: 100px;
 				}
 				&:hover{
@@ -149,6 +148,8 @@
 		text-transform: uppercase;
 		display: inline-block;
 		position: relative;
+		transition:all .5s ease;
+
 		&:before{
 			content:"";
 			border-bottom-width: 12px;
@@ -167,12 +168,12 @@
 			margin:0 auto;
 			transition:all .5s ease;
 		}
+
 		&:hover{
 			&:before{
-				animation-name: backtotp;
-    			animation-duration: 1s;
-    			animation-iteration-count: infinite;
+				border-bottom-color: $luxor-gold;
 			}
+			color: $luxor-gold;
 		}
 	}
 }
@@ -180,4 +181,8 @@
     0% { transform: translateY(0%);}
     50% { transform: translateY(10px);}
     100% { transform: translateY(0%); }
+}
+
+.filters-orig-message {
+	display: none;
 }
