--- a/public/app/themes/studio/views/layouts/master.twig
+++ b/public/app/themes/studio/views/layouts/master.twig
@@ -22,6 +22,10 @@
 
     {% block head %}
     {% endblock %}
+
+    <script>
+        var sightmap_url = "{{ global.sightmap_iframe_link }}";
+    </script>
   </head>
 {% endblock %}
 
