--- a/public/app/themes/studio/views/pages/floorplans.twig
+++ b/public/app/themes/studio/views/pages/floorplans.twig
@@ -39,7 +39,7 @@
 				</div>
 
 				<div class="input-group move-in">
-					<input type="text" class="datepicker" placeholder="Move In">
+					<input type="text" class="datepicker apartment-date trans" placeholder="Move In">
 				</div>
 			</div>
 
@@ -137,7 +137,7 @@
 					</div>
 				{% endfor %}
 			</div>
-			<div class="no-filters-results filters-orig-message" style="display: none;">
+			<div class="no-filters-results filters-orig-message">
 				{{message_no_result}}
 			</div>
 			<div class="back-to-top">
