--- a/public/app/themes/studio/views/partials/address.twig
+++ b/public/app/themes/studio/views/partials/address.twig
@@ -10,12 +10,12 @@
 <ul class="block-social">
     {% if global.facebook %}
     <li>
-        <a href="{{global.facebook}}" title="facebook"><i class="fa fa-facebook-f"></i></a>
+        <a href="{{global.facebook}}" title="facebook" target="_blank"><i class="fa fa-facebook-f"></i></a>
     </li>
     {% endif %}
     {% if global.twitter %}
     <li>
-        <a href="{{global.twitter}}" title="twitter"><i class="fa fa-twitter"></i></a>
+        <a href="{{global.twitter}}" title="twitter" target="_blank"><i class="fa fa-twitter"></i></a>
     </li>
     {% endif %}
 </ul>
