--- a/public/app/themes/studio/assets/styles/blocks/_get-directions.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_get-directions.scss
@@ -7,7 +7,7 @@
 			display: flex;
 		}
 		.title{
-			color: $main-color;
+			color: $luxor-gold;
 			font-size: 24px;
 			text-transform: uppercase; 
 			width: 100%;
@@ -27,34 +27,18 @@
 			max-width: calc(100% - 260px);
 		}
 		.form-input{
-			input[type="text"]{
-				border:1px solid $main-color;
-				height: 40px;
-				width: 100%;
-				padding-left: 20px;
-				&::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-					  	color:$black;
-						font-size: 13px;
-						text-transform: uppercase;
-						line-height: 35px;
-					}
-					&::-moz-placeholder { /* Firefox 19+ */
-					  	color:$black;
-						font-size: 13px;
-						text-transform: uppercase;
-					}
-					&:-ms-input-placeholder { /* IE 10+ */
-					  	color:$black;
-						font-size: 13px;
-						text-transform: uppercase;
-					}
-					&:-moz-placeholder { /* Firefox 18- */
-					 	color:$black;
-						font-size: 13px;
-						text-transform: uppercase;
-					}
+			input {
+				&[type="text"]{
+					border:1px solid $main-color;
+					height: 40px;
+					width: 100%;
+					line-height: 20px;
+					padding-left: 20px;
+					margin-bottom: 0;
+				}
 			}
 		}
+
 		&--container{
 			@media screen and (min-width: 768px){
 				display: flex;
@@ -73,13 +57,15 @@
 				}
 				input{
 					font-size: 15px;
-					line-height: 40px;
-					font-weight: 400;
+					line-height: 20px;
+					height: 40px;
+					font-weight: 500;
 					text-transform: uppercase;
-					color:$main-color;
+					color: $luxor-gold;
 					border:none;
 					background: none;
 					outline: none;
+					margin-bottom: 0;
 				}
 			}
 		}
