--- a/public/app/themes/studio/assets/styles/blocks/_header.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_header.scss
@@ -507,10 +507,14 @@
 		height: 450px;
 		justify-content: center;
 		text-align: center;
+
 		@include breakpoint(custom_phone) {
 			padding: 30px 0 20px; 
 			margin-top: 20px;
 			height: auto;
+		}
+		
+		@include breakpoint(phone) {
 			border-top: 1px solid $color-1;
 		}
 	}
