--- a/public/app/themes/studio/views/partials/footer.twig
+++ b/public/app/themes/studio/views/partials/footer.twig
@@ -7,7 +7,7 @@
             <div class="col-sm-4">
                 <ul class="block-ft__list">
                     {% for item in menu_ft %}
-                        <li><a href="{{item.link}}" title="{{item.text}}">{{item.text}}</a></li>
+                        <li><a href="{{item.link}}" title="{{item.text}}" target="_blank">{{item.text}}</a></li>
                     {% endfor %}
                 </ul>
             </div>
