--- a/public/app/themes/studio/assets/styles/_global.scss
+++ b/public/app/themes/studio/assets/styles/_global.scss
@@ -197,3 +197,11 @@ a {
         display: none;
     }
 }
+
+.spacing-100 {
+    letter-spacing: 0.1rem;
+}
+
+.spacing-200 {
+    letter-spacing: 0.2rem;
+}
