--- a/public/app/themes/studio/assets/styles/blocks/_footer.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_footer.scss
@@ -64,6 +64,9 @@
 			text-align: center;
 			margin-top: 15px;
 		}
+		a:not(:hover) {
+			color: inherit;
+		}
 	}
 
 	@include breakpoint(phone) {
