--- a/public/app/themes/studio/views/partials/header-top.twig
+++ b/public/app/themes/studio/views/partials/header-top.twig
@@ -1,7 +1,7 @@
 <div id="img-banner" class="block-header__thumb" style="background-image: url('{{Image(post._thumbnail_id).src|resize(1920)}}')">
 </div>
 
-<div class="call-action-button hidden-xs container text-right">
+<div class="call-action-button hidden-xs container text-right spacing-200">
     {% if not global.availability_off and global.apply_link %}
         <a class="apply-link" href="{{global.apply_link}}" target="_blank">APPLY NOW</a>
     {% endif %}
