--- a/public/app/themes/studio/assets/styles/blocks/_get-directions.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_get-directions.scss
@@ -66,6 +66,11 @@
 					background: none;
 					outline: none;
 					margin-bottom: 0;
+					transition: all .3s ease-in-out;
+
+					&:hover {
+						color: $main-color;
+					}
 				}
 			}
 		}
