--- a/public/app/themes/studio/views/content-blocks/retail.twig
+++ b/public/app/themes/studio/views/content-blocks/retail.twig
@@ -3,9 +3,9 @@
 	<div class="row">
 		{% for company in content.company %}
 		<div class="block-general__item col-sm-4">
-			<a href="{{ company.link }}">
+			<a href="{{ company.link }}" target="_blank">
 				<div class="block-general__item__thumb">
-					<img src="{{ Image(company.logo).src|resize(360, 360) }}" alt="{{ company.name }}">
+					<img src="{{ Image(company.logo).src|resize(360, 360) }}" alt="{{ company.name }}" class="w-100">
 				</div>
 				<div class="block-general__item__detail">
 					<p class="block-general__item__title">{{ company.name }}</p>
