--- a/public/app/themes/studio/views/content-blocks/contact_us.twig
+++ b/public/app/themes/studio/views/content-blocks/contact_us.twig
@@ -39,7 +39,7 @@
 	            {% endif %}
 
             	{% if item.value %}
-	            	<p>{{item.value}}</p>
+	            	<p style="margin-bottom: 15px;">{{item.value}}</p>
 	            {% endif %}
 
             {% endfor %}
