--- a/public/app/themes/studio/assets/styles/blocks/_amenity.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_amenity.scss
@@ -4,6 +4,11 @@
 	header {
 		font-size: 14px;
 		padding: 25px;
+
+		@include breakpoint(phone) {
+			padding: 25px 15px 15px;
+			text-align: center;
+		}
 	}
 
 	&__item {
@@ -18,6 +23,11 @@
 
 			a {
 				color: inherit;
+			}
+
+			@include breakpoint(phone) {
+				font-size: 24px;
+				margin-bottom: 10px;
 			}
 		}
 
