--- a/public/app/themes/studio/assets/styles/blocks/_contact-us.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_contact-us.scss
@@ -35,6 +35,18 @@
 			font-size: 14px;
 			margin-bottom: 35px;
 		}
+
+		@include breakpoint(phone) {
+			text-align: center;
+
+			h2 {
+				font-size: 30px;
+			}
+
+			.contact__description {
+				margin-bottom: 25px;
+			}
+		}
 	}
 	&--container{
 		@media screen and (min-width: 768px){
