--- a/public/app/themes/studio/assets/styles/blocks/_location.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_location.scss
@@ -138,6 +138,8 @@
 				position: absolute;
 				top: 0;
 				padding-left: 5px;
+				width: 100%;
+				left: 0;
 
 				@media screen and (min-width: 992px) {
 					padding-left: 30px;
