--- a/public/app/themes/studio/assets/styles/components/_noUI.scss
+++ b/public/app/themes/studio/assets/styles/components/_noUI.scss
@@ -20,10 +20,10 @@
 		.noUi-handle {
 			border: none;
 			@include box-shadow(none);
-			width: 25px;
-			height: 25px;
+			width: 26px;
+			height: 26px;
 			left: 50%;
-			@include transform(translateX(-50%));
+			margin-left: -13px;
 			background: $white url(../svg/sources/scrollbar.svg) no-repeat center;
 			@include border-radius(50%);
 			background-size: 15px;
@@ -50,6 +50,8 @@
 
 	@media screen and (min-width: 992px) {
 		height: 54px;
+		left: 50%;
+		@include transform(translateX(-50%));
 	}
 
 	.noUi-horizontal {
@@ -66,10 +68,10 @@
 		.noUi-handle {
 			border: none;
 			@include box-shadow(none);
-			width: 25px;
-			height: 25px;
+			width: 26px;
+			height: 26px;
 			top: 50%;
-			@include transform(translateY(-50%));
+			margin-top: -13px;
 			background: $white url(../svg/sources/scrollbar.svg) no-repeat center;
 			@include border-radius(50%);
 			background-size: 15px;
