--- a/public/app/themes/studio/views/pages/floorplans.twig
+++ b/public/app/themes/studio/views/pages/floorplans.twig
@@ -40,6 +40,7 @@
 
 				<div class="input-group move-in">
 					<input type="text" class="datepicker apartment-date trans" placeholder="Move In">
+					<span class="overlay-focus"></span>
 				</div>
 			</div>
 
