--- a/public/app/themes/studio/views/pages/locations.twig
+++ b/public/app/themes/studio/views/pages/locations.twig
@@ -64,7 +64,7 @@
 								<div class="block-general__item__thumb">
 									<img src="{{Image(item.image).src|resize(750, 430)}}" class="w-100">
 								</div>
-								<div class="block-general__item__detail">
+								<div class="block-general__item__detail scroll-bar">
 									<p>{{ item.description }}</p>
 								</div>
 							{% if item.link|trim != '#' and item.link|trim != '' %}
