--- a/public/app/themes/studio/views/partials/block-life.twig
+++ b/public/app/themes/studio/views/partials/block-life.twig
@@ -22,7 +22,7 @@
                     <div class="block-general__item__thumb">
                         <img src="{{Image(item.image).src|resize(620, 415)}}" alt="{{Image(item.image).title}}" class="w-100">
                     </div>
-                    <div class="block-general__item__detail">
+                    <div class="block-general__item__detail scroll-bar">
                         <p class="block-general__item__title">{{item.title}}</p>
                         <p>{{item.description}}</p>
                     </div>
