--- a/public/app/themes/studio/assets/styles/blocks/_general.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_general.scss
@@ -153,7 +153,7 @@
 				display: flex;
 				flex-flow: column wrap;
 				justify-content: center;
-				top: 0;
+				height: 100%;
 				text-transform: uppercase;
 			}
 		}
