--- a/public/app/themes/studio/views/content-blocks/retail.twig
+++ b/public/app/themes/studio/views/content-blocks/retail.twig
@@ -9,7 +9,7 @@
 				<div class="block-general__item__thumb">
 					<img src="{{ Image(company.logo).src|resize(360, 360) }}" alt="{{ company.name }}" class="w-100">
 				</div>
-				<div class="block-general__item__detail">
+				<div class="block-general__item__detail scroll-bar">
 					<p class="block-general__item__title">{{ company.name }}</p>
 					<p>
 						<span class="address">{{ company.address }}</span>
